Bugfix: Set exliGreyOverlay z-index to 1001 (MOBIL-96).

--- a/less/kb/facetTile.less
+++ b/less/kb/facetTile.less
@@ -39,6 +39,7 @@ html[lang="en_US"] #refine:after{
     .modal-backdrop;
     .fade;
     .in;
+    z-index: 1001;
      iframe{
          border: none;
      }
